[package]
name = "rand_cam"
version = "0.1.0"
edition = "2021"
surge-ping = "0.1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
ping = "0.5.1"
tokio = { version = "1", features = ["full"] }
text_io = "0.1.12"
winapi = { version = "0.3", features = ["winuser", "wincon"] }
url = "2.5.0"
